# bandsoft

./: .gitignore  CMakeLists.txt
analysis/include/: constants.h  global_offset_fadc.txt  global_offset_tdc_1stIter-04132020.txt  runByrun_offset_fadc-10082019.txt  runByrun_offset_tdc_firstIter-04132020.txt
analysis/src/: CMakeLists.txt
analysis/src/dimuon/: CMakeLists.txt  dimuon.cpp
analysis/src/dis-skim/: CMakeLists.txt  hipo2root.cpp
analysis/src/eePi/: CMakeLists.txt  eePi.cpp
analysis/src/electron-fiducial/: CMakeLists.txt  draw_fiducials.cpp  fiducials.cpp
analysis/src/inclusive-compare/: CMakeLists.txt  ElectronFiducial.cc  ElectronFiducial.hh  LUND.C  compare.cpp  gen_tree.cpp  gen_tree.h  inclusive-compare.cpp  inclusive-skim.cpp
analysis/src/quasielastic/: CMakeLists.txt  eepcompare.cpp  eepler.cpp  eepnler.cpp  makesimhists.cpp  nler.cpp  qe-skim.cpp
analysis/src/tagged-background/backgroundSubtraction/: CMakeLists.txt  basic_subtraction.cpp  create_plots.cpp
analysis/src/tagged-background/eventMixing/: CMakeLists.txt  event_mixing.cpp  inclusive_skim.cpp  neutron_skim.cpp
analysis/src/tagged-compare/: CMakeLists.txt  compare-tagged.cpp  tagged-skim.cpp
calibration/include/: calibclass.h  corr2nd_effective_velocity.txt  corr2nd_lr_offsets.txt  corr_effective_velocity.txt  corr_lr_offsets.txt  effective_velocity.txt  helpers.h  improved_lr_offsets.txt  lr_offsets.txt  prev_time_walk_corr_left.txt  prev_time_walk_corr_right.txt  time_walk_corr_left.txt  time_walk_corr_right.txt
calibration/src/: CMakeLists.txt  calibclass.cpp  helpers.cpp
calibration/src/attenuation/: CMakeLists.txt  attenuation.cpp
calibration/src/baroffset/: CMakeLists.txt  barbybar.cpp  layerbylayer.cpp  test.cpp
calibration/src/gainfit/: CMakeLists.txt  SNPtoSLC.py  combFiles.cpp  combPMT.py  compareHV.py  gainFit.cpp  mksnp.py  specFit.cpp
calibration/src/lroffset/: CMakeLists.txt  addCorrection.py  compareOffsets.py  offsets.cpp  residualAfter.py  test_offsets.cpp
calibration/src/sourcefit/: CMakeLists.txt  singlebar.cpp
calibration/src/timewalkfit/: CMakeLists.txt  compareResults.py  test_parameters.cpp  test_walk.cpp  timewalk.cpp
dependencies/: CMakeLists.txt
dependencies/banklib/: BBand.cpp  CMakeLists.txt
dependencies/hipolib/: CMakeLists.txt
dependencies/include/: BBand.h
simulation/: CMakeLists.txt
simulation/include/: band_tree.h  constants.h  digit_tree.h  gen_tree.h  prop_tree.h  recon_tree.h
simulation/src/: CMakeLists.txt
simulation/src/geant/: CMakeLists.txt  geant_sim.cpp
simulation/src/geant/include/: NeutronHallBActionInitialization.h  NeutronHallBAnalysis.h  NeutronHallBDetectorConstruction.h  NeutronHallBDetectorMessenger.h  NeutronHallBEventAction.h  NeutronHallBPrimaryGeneratorAction.h  NeutronHallBRunAction.h  NeutronHallBTrackerHit.h  NeutronHallBTrackerSD.h
simulation/src/geant/src/: NeutronHallBActionInitialization.cpp  NeutronHallBDetectorConstruction.cpp  NeutronHallBDetectorMessenger.cpp  NeutronHallBEventAction.cpp  NeutronHallBPrimaryGeneratorAction.cpp  NeutronHallBRunAction.cpp  NeutronHallBTrackerSD.cpp
simulation/src/generators/: CMakeLists.txt  dis.cpp  dis_CLAS12.cpp  inclusive_CLAS12.cpp  qe.cpp  randoms_CLAS12.cpp
simulation/src/libs/: CMakeLists.txt  constants.h  crossdis.cpp  crossincl.cpp  crossincl2.cpp  deuteronwf.cpp
simulation/src/trees/: CMakeLists.txt  LinkDef.h  band_tree.cpp  digit_tree.cpp  prop_tree.cpp  recon_tree.cpp
tools/include/: constants.h
tools/src/: CMakeLists.txt  hipo2root.cpp
