set(INCLUDES ${ROOT_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/dependencies/include ${CMAKE_CURRENT_SOURCE_DIR}/../include )

include_directories(${INCLUDES})
#add_executable(HERE HERE.cpp )
#target_link_libraries(HERE ${ROOT_LIBRARIES} Hipo4 Banks4 )
#install( TARGETS HERE
#		DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../bin )
